tests/ui/parser/issues/issue-24375.stderr
error: expected a pattern, found an expression
  --> $DIR/issue-24375.rs:6:9
   |
LL |         tmp[0] => {}
   |         ^^^^^^ arbitrary expressions are not allowed in patterns

error: aborting due to 1 previous error

